[package]
name = "todo"
version = "0.1.0"
authors = ["Oliver Downard <olivermd@btinternet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.8"
simplelog = "^0.7.4"
git2 = "0.11.0"
regex = "1.3.4"
failure = "0.1.6"