[package]
name = "todo"
version = "0.1.0"
authors = ["Oliver Downard <olivermd@btinternet.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.29", features = ["derive"]}
log = "0.4.8"
simplelog = "0.12.0"
git2 = "0.15.0"
regex = "1.3.4"
anyhow = "1.0.66"